css/styles.css
@charset "UTF-8";
:root {
    --divider-colour: #FFFFFF;
    --btn-primary-colour: 75, 79, 73;
    --bs-primary-rgb: 115, 129, 113;
    --bs-light-rgb: 248, 249, 250;
    --bs-font-sans-serif: 'Didact Gothic', sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
}

html {
    height: 100%;
    scroll-padding-top: calc(4.5rem - 1px);
}
@media (prefers-reduced-motion: no-preference) {
    :root {
        scroll-behavior: smooth;
    }
}

body {
    margin: 0;
    font-family: var(--bs-font-sans-serif);
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5;
    width: 100%;
    height: 100%;
    color: #212529;
    text-align: var(--bs-body-text-align);
    background-color: #ffffff;
    -webkit-text-size-adjust: 100%;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    padding-bottom: calc(10rem - 4.5rem);
    padding-top: 0rem;
    background: linear-gradient(to bottom,  rgb(106 120 115 / 80%) 0%, rgb(72 64 60 / 80%) 100%), url("../assets/img/bg-mastheadsm.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
}

@media (max-width: 991.98px) {
    body {
        margin-top: 10rem;
    }
}

@media (max-width: 364.98px) {
    .text-center-fix {  
        display:inline-block;
        margin-right:-100%;
        max-width: 90vw;
    }
    #title-wrapper {
        position:relative;
        right:50%;
        text-align:center;
    }
}
@media (max-width: 307.98px){
    #title-wrapper h1 {
        font-size: 1.75rem!important;
    }
    .col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
        padding-left: 0px!important;
        padding-right: 0px!important;
    }
    .shrinky-text {
        overflow: hidden;
        font-size: .8rem!important;
      }
}

@media (min-width: 349.98px) {
    .px-xs-3 {
        padding-left: 1rem!important;
        padding-right: 1rem!important;
    }
}

section#expectations .border {
    border: solid black 1px!important;
}

hr {
    margin: 1rem 0;
    color: inherit;
    background-color: currentColor;
    border: 0;
    opacity: 0.25;
}

hr:not([size]) {
    height: 1px;
}

h5, h2, h1 {
    margin-top: 0;
    margin-bottom: 0.5rem;
    font-family: var(--bs-font-sans-serif);
    font-weight: 500;
    line-height: 1.2;
}
h2{
    font-family: var(--bs-font-sans-serif);
}

.small {
    font-size: 0.875em;
}

a {
    color: #738171;
    text-decoration: underline;
}
a:hover {
    color: rgba(var(--bs-primary-rgb), .75);
}

.page-section {
    padding: 5rem 1rem;
    margin-bottom: 5rem;
    border-radius: .25em;
}

img,
button:focus:not(:focus-visible) {
    outline: 0;
}

@media (min-width: 1400px) {
    .container {
        max-width: 1320px;
    }
}

.btn {
    display: inline-block;
    font-family: var(--bs-font-sans-serif);
    font-weight: 400;
    line-height: 1.5;
    color: #212529;
    text-align: center;
    text-decoration: none;
    vertical-align: middle;
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-color: transparent;
    border: 1px solid transparent;
    padding: 0.375rem 0.75rem;
    font-size: 1rem;
    border-radius: 0.25rem;
    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

.btn-primary {
    color: rgb(var(--btn-primary-colour)) !important;
    background-color: #fff;
}
.btn-primary:hover {
    color: rgba(var(--btn-primary-colour), .9) !important;
    background-color: rgba(255,255,255,.9);
}
.btn-primary:focus, .btn-primary:active {
    color: #fff;
    background-color: rgba(255,255,255,.6)!important;
    box-shadow: 0 0 0 0.25rem rgba(246, 246, 246, 0.5);
}
.btn-xl {
    padding: 1.25rem 2.25rem;
    font-size: 0.85rem;
    font-weight: 700;
    text-transform: uppercase;
    border: none;
    border-radius: 10rem;
}
.btn-xl:hover {
    color: rgba(255, 255, 255, 0.75);
}

svg:not(:root).svg-inline--fa {
    overflow: visible;
}
.svg-inline--fa {
    display: inline-block;
    font-size: inherit;
    height: 1em;
    overflow: visible;
    vertical-align: -0.125em;
}

.fixed-top {
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    z-index: 1030;
}

.ms-auto {
    margin-left: auto !important;
}

.text-primary {
    color: rgba(var(--bs-primary-rgb), 1) !important;
}

.text-muted {
    color: #6c757d !important;
}

.bg-primary {
    --bs-bg-opacity: 1;
    background-color: rgba(var(--bs-primary-rgb), var(--bs-bg-opacity)) !important;
}

.text-white-75 {
    color: rgba(255, 255, 255, 0.75) !important;
}

hr.divider {
    height: 1px;
    max-width: 5rem;
    margin: 1.5rem auto;
    background-color: var(--divider-colour);
    opacity: 1;
}

hr.divider-light {
    background-color: #fff;
}

hr.divider-dark {
    background-color: #000;
}

.nav-link {
    display: block;
    padding: 0.5rem 1rem;
    color: #f4623a;
    text-decoration: none;
    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
}
.nav-link:hover, .nav-link:focus {
    color: #c34e2e;
}
.navbar-brand {
    padding-top: 0.3125rem;
    padding-bottom: 0.3125rem;
    margin-right: 1rem;
}
.navbar-brand img {
    max-width: 100%;
    height: 1.5em;
    filter: brightness(3);
}
@media (max-width: 321px) {
    .navbar {
        padding-right: 0px!important;
        padding-left: 0px!important;
    }
}
@media (max-width: 421px) {
    #profile-image {
        padding: 1em!important;
    }
    .navbar-brand {
        max-width: 65%!important;
    }
}
.navbar-light .navbar-nav .nav-link {
    color: rgba(0, 0, 0, 0.55);
}
.navbar-light .navbar-toggler {
    color: rgba(0, 0, 0, 0.55);
    border-color: rgba(0, 0, 0, 0.1);
}
.navbar-light .navbar-toggler-icon {
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
}
#mainNav {
    box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%);
    background-color: #fff;
    transition: background-color 0.2s ease;
}
#mainNav .navbar-brand {
    font-family: var(--bs-font-sans-serif);
    font-weight: 700;
    color: #212529;
}
#mainNav .navbar-nav .nav-item .nav-link {
    color: #6c757d;
    font-family: var(--bs-font-sans-serif);
    font-weight: 700;
    font-size: 0.9rem;
    padding: 0.75rem 0;
}
#mainNav .navbar-nav .nav-item .nav-link:hover, #mainNav .navbar-nav .nav-item .nav-link:active {
    color: #f4623a;
}
@media (min-width: 992px) {
    #mainNav {
        box-shadow: none;
        background-color: transparent;
    }
    #mainNav .navbar-brand {
        color: rgba(255, 255, 255, 0.7);
    }
    #mainNav .navbar-brand:hover {
        color: #fff;
    }
    #mainNav .navbar-nav .nav-item .nav-link {
        color: rgba(255, 255, 255, 0.7);
        padding: 0 1rem;
    }
    #mainNav .navbar-nav .nav-item .nav-link:hover {
        color: #fff;
    }
    #mainNav .navbar-nav .nav-item:last-child .nav-link {
        padding-right: 0;
    }
}
.navbar-brand {
    max-width: 50%;
    text-align: justify;
}
ul.navbar-nav li.nav-button {
    background-color: rgb(var(--btn-primary-colour));
    border-radius: 1em;
    padding-right: 1rem;
}

@media (max-width: 991.98px) {
    ul.navbar-nav li.nav-button{
        background-color: white !important;
    }
    #footerlogo {
        padding-bottom: 2rem;
    }
}

header.masthead h1 {
    font-size: 2.25rem;
    font-family: var(--bs-font-sans-serif);
}
@media (min-width: 992px) {
    header.masthead {
        height: 100vh;
        min-height: 40rem;
        padding-top: 4.5rem;
        padding-bottom: 0;
    }
    header.masthead p {
        font-size: 1.15rem;
    }
    header.masthead h1 {
        font-size: 3rem;
    }
}
@media (min-width: 1200px) {
    header.masthead h1 {
        font-size: 3.5rem;
    }
}

.whitebg {
    background-color: white;
}

.page-section .card {
    border: 0;
    border: 2 solid #000000;
    border-bottom: 2px solid #738171;
}

.vcimagewrapper {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
}

#practice1 {
    background-image: linear-gradient(to bottom,  rgb(79 104 95 / 80%) 0%, rgb(86 73 67 / 80%) 100%), url('../assets/img/practice1sm.jpg');
}
#practice2 {
    background-image: linear-gradient(to bottom,  rgb(79 104 95 / 80%) 0%, rgb(86 73 67 / 80%) 100%), url('../assets/img/practice2sm.jpg');
}
.fill-image{
    background-repeat: no-repeat;
    background-position: 50% 50%;
    background-size: cover;
    min-height: 200px;
    border: solid white 1px;
    border-radius: 0.25rem;
}
@media (pointer:none), (pointer:coarse), (hover:none), (max-width: 349.98px) {
    .fill-image {
      display: grid;
      align-content: space-evenly;
    }
}
@media (min-width: 349.98px) and (hover: hover) {
    .fillbox {
        width: 505px;
        width: -webkit-calc(100% - 2rem);
        width:    -moz-calc(100% - 2rem);
        width:         calc(100% - 2rem);
        height: 100%;
        position: absolute;
        top: 0;
        left: 1rem;
    }
    .hoverlay {
        opacity: 1;
    }
    .hoverlay + div {
        opacity: 0;
        pointer-events: none;
        padding-left: 3rem;
        padding-right: 3rem;
    }
    .hoverlay:hover{
        opacity: 0;
    }
    .hoverlay:hover + div{
        opacity: 1;
        background-color: rgba(255, 255, 255, .2);
    }
}

#footerlogo {
    width: 25rem;
    max-width: 80%;
}

#contact-card {
    max-width: 500px;
    margin-left: auto;
    margin-right: auto;
}

#mainNav.navbar-shrink {
    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
    background-color: #fff;
}
#mainNav.navbar-shrink .navbar-brand {
    color: #738171;
}
#mainNav.navbar-shrink .navbar-brand img {
    filter: brightness(1);
}
#mainNav.navbar-shrink .navbar-brand:hover {
    color: rgba(var(--bs-primary-rgb), .8);
}
#mainNav.navbar-shrink .navbar-nav .nav-item .nav-link {
    color: #738171;
}
#mainNav.navbar-shrink .navbar-nav .nav-item .nav-link:hover {
    color: rgba(var(--bs-primary-rgb), .6);
}
#mainNav.navbar-shrink .navbar-nav .nav-item.nav-button .nav-link {
    color: #ffffff;
}
#mainNav.navbar-shrink .navbar-nav .nav-item.nav-button .nav-link {
    color: #ffffff;
}
#mainNav.navbar-shrink .navbar-nav .nav-item.nav-button .nav-link:hover {
    color: rgba(255, 255, 255, 0.75);
}
}
#mainNav.navbar-shrink .navbar-nav .nav-item.nav-button .nav-link{
    color: #ffffff;
}

@media (max-width: 991.98px) {
    ul.navbar-nav li.nav-button{
        background-color: white !important;
    }
    #mainNav.navbar-shrink .navbar-nav .nav-item.nav-button .nav-link{
        color: #6c757d !important;
    }
    #footerlogo {
        padding-bottom: 2rem;
    }
    .navbar-brand img {
        filter: brightness(1);
    }
}

@media (min-width: 1514px){
    .mx-lg-10 {
        margin-left: 5rem!important;
        margin-right: 5rem!important;
    }
}

